fix: Menu-Wochenansicht und Seed-Daten für alle Wochentage
- Profil.tsx: extra schließende Klammer entfernt (Syntaxfehler)
- MenuController: getWeekMenu gibt jetzt Map<String, List<MenuItem>> zurück
- MenuService: getByWeek gruppiert Ergebnisse nach Datum
- Seed-Daten für Mo-Fr statt nur heute